# dsdm

./: .gitignore  Cargo.toml  README.org
src/: main.rs
src/cli/: arg_parser.rs  error.rs  mod.rs
src/core/: global.rs  mod.rs  template.rs
src/modules/: generate.rs  mod.rs  read.rs
src/yaml/: global.yaml  mod.yaml
